# Widgetry

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.autosave  README.md
cmake/: Dependencies.cmake  FindGenO.cmake  FindHelper.cmake  FindJsoner.cmake  FindQt.cmake  Utils.cmake
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  datacontroller.cpp  datacontroller.h  logincontroller.cpp  logincontroller.h  main.cpp  mainwindow.cpp  mainwindow.ui  useredit.cpp  useredit.h  useredit.ui  userinterface.cpp  userinterface.h  userwindow.cpp  userwindow.h  userwindow.ui
src/: .gitignore  CMakeLists.txt  WidgetryConfig.cmake  WidgetryConfig.cmake.in  abstractdatacontroller.cpp  abstractdatacontroller.h  config.h  config.h.in  dataedit.cpp  dataedit.h  dataedit_p.h  datainterface.cpp  datainterface.h  datainterface.ui  datainterface_p.h  datainterfacebase.cpp  datainterfacebase.h  datainterfacebase_p.h  datainterfaceforge.cpp  datainterfaceforge.h  datainterfaceforge_p.h  formdataedit.cpp  formdataedit.h  global.cpp  global.h  interfaceholder.cpp  interfaceserver.cpp  interfaceserver.h  interfaceserver_p.h  operation.cpp  operation.h  userinterface.cpp  userinterface.h  userinterface_p.h  widgetry.h
src/communication/: CMakeLists.txt  interfaceserver.cpp  interfaceserver.h  operation_p.h
src/data/: CMakeLists.txt  dataquery.cpp  dataquery.h  dataresponse.cpp  dataresponse.h  datatablemodel.cpp  datatablemodel.h  datatablemodel_p.h
src/datainterface/: CMakeLists.txt  datainterface.cpp  datainterface.h  datainterface.ui  datainterface_p.h  datainterfaceblueprint.cpp  datainterfaceblueprint.h  datainterfaceblueprint_p.h  datainterfaceforge.cpp  datainterfaceforge.h  datainterfaceforge_p.h
src/input/: CMakeLists.txt  abstractdataedit.cpp  abstractdataedit.h  abstractdataedit_p.h  abstractdataeditfactory.cpp  abstractdataeditfactory.h  dataedit.cpp  dataedit.h  dataedit_p.h  dataeditdialog.cpp  dataeditdialog_p.h  dataeditfactory.h  datawindow.cpp  datawindow.h  datawindow_p.h  formdataedit.cpp  formdataedit.h  formdataedit_p.h
src/lib/: CMakeLists.txt  debug.cpp  debug_p.h  global.h  interfaceholder.cpp  interfaceholder.h  userinterface.cpp  userinterface.h  userinterface_p.h  widgetry.h
src/lib/app/: CMakeLists.txt  application.cpp  application.h  application_p.h
src/lib/authentication/: CMakeLists.txt  logindialog.cpp  logindialog.h  logindialog.ui
src/lib/communication/: interfaceserver.cpp  interfaceserver.h  operation.cpp  operation.h
src/lib/components/: CMakeLists.txt  itemdelegate.cpp  itemdelegate.h  lineedit.cpp  lineedit.h  lineedit_p.h  loadindicator.cpp  loadindicator.h  loginedit.cpp  loginedit.h  passwordedit.cpp  passwordedit.h  searchbar.cpp  searchbar.h  tablewidget.cpp  tablewidget.h  tablewidget.ui  tablewidget_p.h
src/lib/data/: CMakeLists.txt  abstractdatacontroller.cpp  abstractdatacontroller.h  dataresponse.cpp  dataresponse.h  datatablemodel.h  datatablemodel_p.h
src/lib/databrowser/: CMakeLists.txt  abstractdatabrowserhandler.cpp  abstractdatabrowserhandler.h  databrowser.cpp  databrowser.h  databrowser.ui  databrowser_p.h  databrowserblueprint.cpp  databrowserblueprint.h  databrowserblueprint_p.h  databrowserblueprinttask.cpp  databrowserblueprinttask_p.h  databrowserhandler.cpp  databrowserhandler_p.h  databrowsertablecolumnbuilder.cpp  databrowsertablecolumnbuilder.h
src/lib/dataedit/: CMakeLists.txt  abstractdataedit.cpp  abstractdataedit.h  abstractdataedit_p.h  abstractdataeditfactory.cpp  abstractdataeditfactory.h  abstractdataeditfactory_p.h  dataedit.cpp  dataedit.h  dataedit_p.h  dataeditdialog.cpp  dataeditdialog.h  dataeditdialog_p.h  dataeditfactory.h  dataedithelper.cpp  dataedithelper_p.h  dataedithelperdialog.cpp  dataedithelperdialog_p.h  dataselector.cpp  dataselector.h  dataselector.ui  dataselector_p.h  datawindow.cpp  datawindow.h  datawindow_p.h  formdataedit.cpp  formdataedit.h
src/lib/datainterface/: datainterface.cpp  datainterface.h  datainterface.ui  datainterface_p.h  datainterfaceblueprint.cpp  datainterfaceblueprint.h  datainterfaceblueprint_p.h  datainterfaceforge.cpp  datainterfaceforge.h  datainterfaceforge_p.h
src/lib/input/: CMakeLists.txt  abstractdataedit.cpp  abstractdataedit.h  abstractdataedit_p.h  abstractdataeditfactory.cpp  abstractdataeditfactory.h  abstractdataeditfactory_p.h  dataedit.cpp  dataedit_p.h  dataeditdialog.cpp  dataeditdialog_p.h  dataeditfactory.h  dataselector.cpp  dataselector.h  dataselector.ui  dataselector_p.h  dataselectorwidget.cpp  dataselectorwidget.h  dataselectorwidget.ui  dataselectorwidget_p.h  datawindow.h
src/lib/resources/: widgetry_resources.qrc
src/lib/watcher/: abstractrequestwatcher.cpp  abstractrequestwatcher.h
src/lib/widget/: CMakeLists.txt  abstractwidget.cpp  abstractwidget.h  abstractwidget_p.h  dialog.cpp  dialog.h  dialog_p.h  widget.cpp  widget.h  widget_p.h  widgetoperation.cpp  widgetoperation.h  widgetoperation_p.h  widgetrequest.cpp  widgetrequest.h  widgetresponse.h
src/lib/widgets/: CMakeLists.txt  widget.cpp  widget.h  widgetoperation.cpp  widgetoperation.h
src/lib/window/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow_p.h
testdata/: readme.txt
tests/: CMakeLists.txt  main.cpp
translations/: widgetry_en.ts  widgetry_fr.ts
